# BetaGen

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py
backend/app/core/: config.py
backend/scripts/: openpose_test.py  test_mediapipe.py  test_mediapipe_example.py
backend/scripts/bash/: test_mediapipe_example.sh
backend/src/app/models/pose/: mediapipe_model.py
docs/: architecture.md  questions.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: JobStatusPanel.tsx  KeypointsViewer.tsx  ResultsPanel.tsx  UploadPanel.tsx
frontend/src/lib/: api.ts  types.ts
prompt/stage1/: build_backend_demo.md  build_frontend_demo.md
